--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <center>
+<br><br><br><br><br><br>
 <h1>sikoreczko</h1>
-<img src="https://raw.githubusercontent.com/xCaRiV/dskr/main/dskr.gif">
+<img src="https://raw.githubusercontent.com/xCaRiV/dskr/main/dskr.gif" alt="sikoreczka" width="550" height="400">
 </center>
