--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <center>
-<br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br>
 <h1>sikoreczko</h1>
-<img src="https://raw.githubusercontent.com/xCaRiV/dskr/main/dskr.gif" alt="sikoreczka" width="550" height="400">
+<img src="https://raw.githubusercontent.com/xCaRiV/dskr/main/dskr.gif" alt="sikoreczka" width="650" height="500">
+<audio src="dskr.mp3" controls>   
+<embed 
+        src="dskr.mp3"
+        width="1"
+        height="1"
+        loop="true"
+        autostart="true"
+>
+</audio>
 </center>
