--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <br><br><br><br><br><br><br><br><br><br>
 <h1>sikoreczko</h1>
 <img src="https://raw.githubusercontent.com/xCaRiV/dskr/main/dskr.gif" alt="sikoreczka" width="650" height="500">
+<br>
+<h2>kliknij sb</h2>
+<br>
 <audio src="dskr.mp3" controls>   
 <embed 
         src="dskr.mp3"
