--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
         autostart="true"
 >
 </audio>
+<img src="https://raw.githubusercontent.com/xCaRiV/dskr/main/mc alt="sikoreczka minecraft" width="325" height="250">
 </center>
